@@ -8,6 +8,7 @@
   * Switched Stone Pressure Plate and Stone Button textures to use
     the actually-correct one
   * Make the minimap slightly more useful in the Nether
+  * Handle an exception when the "saves" directory doesn't exist
 
 Minecraft X-Ray 2.7 Maintenance Branch 12 (2011.04.19)
 
